--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1092,12 +1092,13 @@ figure#ultimo-lanche {
         position: relative;
         margin-left:460px;
         margin-top: 330px;
+        padding:0px 10px 0px 10px;
         width: 10%;
         height: 63px;
         float: left;
         overflow: hidden;
         border: 2px solid rgba(255, 255, 255, 0);
-        border-radius: 1000px;
+        border-radius:33px;
     }
 
     figure#social2 {
@@ -1130,7 +1131,7 @@ figure#ultimo-lanche {
         margin-left: 0px;
         font-size: 12px;
         width: 100%;
-        height: 40px;
+        height: 20px;
         background-color: rgb(255, 136, 0);
         float: left;
         padding-left: 5px;
