Algumas coisas Otimizadas

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -4,6 +4,9 @@
     font-family: 'FonteLogo';
     src: url("../fonts/bubblegum-sans-regular.otf");
 }
+ iframe {
+    width:100%;
+ }
 
 body {
     margin: 0px;
@@ -975,22 +978,35 @@ figure#ultimo-lanche {
 
 }
 @media(min-width:1024px) {
+    nav#principal {
+        overflow: hidden;
+
+
+    }
     nav#principal ul {
         display: block;
         margin: 0px;
         color: white;
-        font-size: 20px;
+        font-size: 25px;
         text-align: left;
         font-family: 'FonteLogo';
+        text-align:center;
     
     }
     
     nav#principal li {
+        height:50px;
         text-decoration: none;
         display: inline-block;
-        padding: 20px 0px 0px 20px;
-    
-    
+        padding-top: 20px;
+        padding-left:0px;
+        margin:0px 0px 0px 60px;
+        transition: all .4s;
+        border-bottom: 3px solid orange;
+    }
+    nav#principal li:hover {
+        border-bottom: 3px solid rgb(255, 136, 0) ;
+        color:yellow;
     }
     #icone {
         display:none;
@@ -1007,10 +1023,10 @@ figure#ultimo-lanche {
     }
     
     .locall {
-        margin-right:50%
+        margin-right:90%
     }
     .lanches {
-        display:none;
+        display:block;
         float: left;
         width: 100%;
         height: 100px;
@@ -1018,7 +1034,7 @@ figure#ultimo-lanche {
         margin-top: 75px;
     }
     .lanches h1 {
-        margin-left:5px;
+        margin-left:10px;
 
     }
     
@@ -1092,13 +1108,12 @@ figure#ultimo-lanche {
         position: relative;
         margin-left:460px;
         margin-top: 330px;
-        padding:0px 10px 0px 10px;
         width: 10%;
         height: 63px;
         float: left;
         overflow: hidden;
         border: 2px solid rgba(255, 255, 255, 0);
-        border-radius:33px;
+        border-radius:50px;
     }
 
     figure#social2 {
@@ -1146,8 +1161,4 @@ figure#ultimo-lanche {
         margin-bottom: 0px;
 
     }
-
-
-
-
 }
