--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1131,6 +1131,7 @@ figure#ultimo-lanche {
         height: 100px;
         background-color: rgb(255, 136, 0);
         margin-top: 85px;
+        padding:0;
     }
 
     .lanches h1 {
